--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,12 @@
     <link rel="stylesheet" type="text/css"  href="{% static 'css/slick.css' %}">
     <link rel="stylesheet" type="text/css"  href="{% static 'css/lightbox.min.css' %}">
     <link rel="stylesheet" type="text/css"  href="{% static 'css/jnoty.css' %}">
+    <link rel="stylesheet" type="text/css"  href="{% static 'css/chart.css' %}">
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.2.1/dist/chart.min.js"></script>
+    <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
+    <script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
+    <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
 
     <!-- Custom stylesheet -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
@@ -68,6 +74,9 @@
 <script  src="{% static 'js/lightgallery-all.js' %}"></script>
 <script  src="{% static 'js/jnoty.js' %}"></script>
 <script  src="{% static 'js/app.js' %}"></script>
+<script  src="{% static 'js/chart.js' %}"></script>
+
+
 
 {% include 'includes/footer.html' %}
 </body>
