added total auction running view-demo added total amount view-demo

--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -7,8 +7,45 @@
 
 
 <div class="main-content" id="panel">
-    <div>
-        <div id="chartdiv"></div>
+    <div class="header pb-6" style="background-color: #3b589e">
+      <div class="container-fluid">
+        <div class="header-body" style="padding-top: 50px;padding-bottom: 40px; align-content: center;">
+
+          <div class="row">
+            <div class="col-xl-6 col-md-6">
+              <div class="card card-stats">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col" style="text-align: center;">
+                      <h5 class="card-title text-uppercase text-muted mb-0"><b>Total running auction</b></h5>
+                      <span class="h2 font-weight-bold mb-0">350,897</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-xl-6 col-md-6">
+              <div class="card card-stats">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col" style="text-align: center;">
+                      <h5 class="card-title text-uppercase text-muted mb-0"><b>Total Amount</b></h5>
+                      <span class="h2 font-weight-bold mb-0">2,356</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div style="background-color: #0c5460">
+        <div style="text-align: center; margin-top: 50px; padding-top: 30px;-webkit-text-fill-color: whitesmoke">
+            <h2>Auction Added OverView</h2>
+        </div>
+        <div id="chartdiv" style="padding-right: 50px;"></div>
     </div>
 </div>
 {% endblock %}
