--- a/templates/base.html
+++ b/templates/base.html
@@ -75,6 +75,7 @@
 <script  src="{% static 'js/jnoty.js' %}"></script>
 <script  src="{% static 'js/app.js' %}"></script>
 <script  src="{% static 'js/chart.js' %}"></script>
+<script  src="{% static 'js/bar-chart.js' %}"></script>
 
 
 
