successfully show bar_chart for total_acution_value_by_time for time format day and hour

--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -79,8 +79,8 @@
                         <hr>
                         <div style="background-color: #0c5460; height: 500px;width: 100%">
                              <div>
-                                <select class="dropdown" id="dropdown" style="margin-top: 10px;">
-                                    <option value="" selected="selected">Select Time Format</option>
+                                <select class="dropdown" id="dropdown_id" style="margin-top: 10px;" onchange="dropdownFunction(this.value);">
+
                                     <option value="dropdown_date">Day</option>
                                     <option value="dropdown_datetime">Hour</option>
                                 </select>
