--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -74,15 +74,15 @@
                   <div class="row">
                     <div class="col" style="text-align: center;">
                         <div>
-                            <h2>Auction Added OverView</h2>
+                            <h2>Total Auction Value By Time</h2>
                         </div>
                         <hr>
                         <div style="background-color: #0c5460; height: 500px;width: 100%">
                              <div>
                                 <select class="dropdown" id="dropdown_id" style="margin-top: 10px;" onchange="dropdownFunction(this.value);">
 
-                                    <option value="dropdown_date">Day</option>
-                                    <option value="dropdown_datetime">Hour</option>
+                                    <option value="dropdown_date">Hour</option>
+                                    <option value="dropdown_datetime">Day</option>
                                 </select>
                             </div>
                             <div id="barChart" style="padding-right: 5px;height: 480px;width: 100%" ></div>
