--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -7,6 +7,7 @@
 {% block content %}
 
 <div id="data" style="display: none">{{ data }}</div>
+<div id="auction_end_data" style="display: none">{{ auction_end_data }}</div>
 <div id="auction_by_datetime" style="display: none">{{ auction_by_datetime }}</div>
 <div id="auction_by_date" style="display: none">{{ auction_by_date }}</div>
 
@@ -59,9 +60,10 @@
                             <h2>Auction Added OverView</h2>
                         </div>
                         <hr>
-                        <div style="background-color: #0c5460;">
-                            <div id="chartdiv" style="padding-right: 5px;" ></div>
-                        </div>
+{#                        <div style="background-color: #0c5460;">#}
+{#                            #}
+{#                        </div>#}
+                        <div id="chartdiv" style="padding-right: 5px;" ></div>
                     </div>
                   </div>
                 </div>
